# drishti

./: .env  .replit  README.md  cleanup.ts  cookies.txt  package-lock.json  package.json  pyproject.toml  replit.md  start_python_service.py
.local/state/replit/agent/design_reference/2cfd4401-14e7-4bbd-ad05-52b1bb3e3d43/: 3f80d218-9296-4f68-a121-6ec11b56a919.html  f120cb36-1211-48a4-9690-e076c7cec302.html
.local/state/replit/agent/filesystem/: filesystem_state.json
client/src/: App.tsx  index.css
client/src/components/: AlertBroadcast.tsx  CameraFeedGrid.tsx  DatabaseSearch.tsx  DivineVisionFeed.tsx  EnhancedCameraFeed.tsx  IncidentFeed.tsx  LiveCrowdMap.tsx  LostAndFound.tsx  PrototypeDemoPanel.tsx  QuickActions.tsx  QuickActionsEnhanced.tsx  RecentReports.tsx  SimulatedCameraGrid.tsx  SystemHealth.tsx  VolunteerManagement.tsx
client/src/hooks/: useWebSocket.ts
client/src/pages/: admin-dashboard.tsx  alerts.tsx  auth.tsx  dashboard.tsx  divine-vision.tsx  guest-dashboard.tsx  incidents.tsx  landing.tsx  lost-and-found.tsx  prototype-demo.tsx  sophisticated-dashboard.tsx  user-dashboard.tsx  volunteers.tsx
client/src/types/: index.ts
merge/: app.py  index.html
python_ai/: app.py  audio_transcription.py  crowd_analysis.py  requirements.txt
python_services/: ai_service.py  requirements.txt
server/: auth.ts  index.ts  replitAuth.ts  routes.ts  storage.ts
server/services/: openai.ts  pythonAI.ts
shared/: schema.ts
